<resources>
    <string name="app_name">Taskie Repo</string>
    <string name="newTaskHeadingText">New task:</string>
    <string name="newTaskTitleInputHint">Enter task title</string>
    <string name="newTaskDescriptionInputHint">Enter task description</string>
    <string name="lowPriority">Low</string>
    <string name="mediumPriority">Medium</string>
    <string name="highPriority">High</string>
    <string name="saveTaskActionText">Save</string>
    <string name="emptyFields">Check your inputs</string>
    <string name="noTaskFound">No such task found</string>
    <string name="no_data">No data! :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_application_title">About Application</string>
    <string name="hello_it_s_me_mario">Hello it\'s me Mario</string>
    <string name="about_author_title">About Author</string>
    <string name="set_a_new_title">Set a new Title:</string>
    <string name="new_title_here">New Title Here</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="set_new_description">Set new Description:</string>
    <string name="new_description_here">New Description Here</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="hint_name">Name</string>
    <string name="register">Register</string>
    <string name="go_to_login">Go to login</string>
    <string name="edit_task_Button">Edit This Task</string>
    <string name="update_task">Update Task :</string>


</resources>
