<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_new_description"
            android:textSize="@dimen/titleSize"
            android:textAlignment="center"
            />

    <EditText
            android:id="@+id/newDescription"
            android:layout_margin="@dimen/bigMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_description_here"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            >
        <Button
                android:id="@+id/cancelButtonDialogDescription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:layout_margin="@dimen/smallMargin"
                />

        <Button
                android:id="@+id/okButtonDialogDescription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:layout_margin="@dimen/smallMargin"
                />

    </LinearLayout>

</LinearLayout>